get the rid of Arrays